add Readme Template

--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   "homepage":"https://github.com/jsoury/OC-P11-Kasa",
   "scripts": {    
     "predeploy" : "cd kasa && yarn build",
-    "deploy" : "gh-pages -d build"    
+    "deploy" : "cd kasa && yarn deploy"    
   }  
 }
