--- a/kasa/package.json
+++ b/kasa/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kasa",
   "version": "0.1.0",
-  "private": false,  
+  "private": false,
   "dependencies": {
     "@craco/craco": "^6.4.5",
     "@testing-library/jest-dom": "^5.14.1",
@@ -12,14 +12,13 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
-    "web-vitals": "^2.1.0"    
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "craco start",
-    "build": "BUILD_PATH='../build/' craco build",
+    "build": "craco build",
     "test": "craco test",
-    "predeploy" : "yarn build",
-    "deploy" : "gh-pages -d build",
+    "deploy": "gh-pages -d ../build",
     "eject": "react-scripts eject",
     "lint": "npx eslint src test",
     "lint:fix": "npm run lint -- --fix",
@@ -46,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "prettier": "2.7.1"
   }
 }
